# ER Triage OpenEnv - Hospital Emergency Room Triage Simulation
# Compatible with OpenEnv multi-mode deployment

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "er-triage-openenv"
version = "1.0.0"
description = "Hospital ER Triage OpenEnv AI Agent Training Environment"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "optimisticdhruv"}
]
keywords = [
    "openenv", "reinforcement-learning", "medical", 
    "triage", "emergency", "esi", "healthcare", "ai"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "faker>=20.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
baseline = [
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/optimisticdhruv/er-triage-openenv"
Repository = "https://github.com/optimisticdhruv/er-triage-openenv"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
